[gd_scene load_steps=5 format=3 uid="uid://dnvss1ily5njc"]

[ext_resource type="Script" uid="uid://bj8krsdncedu6" path="res://addons/gwj_countdown/scenes/countdown_ui.gd" id="1_0bnqm"]
[ext_resource type="Texture2D" uid="uid://b6pux56uv4ugl" path="res://addons/gwj_countdown/assets/gwj_mascot_icon_vector.svg" id="2_gybcw"]
[ext_resource type="Texture2D" uid="uid://cbitw7lfvhkw0" path="res://addons/gwj_countdown/assets/gwj_mascot_dark_icon_vector.svg" id="3_ndbey"]

[sub_resource type="SystemFont" id="SystemFont_jun1l"]
font_weight = 800
subpixel_positioning = 0

[node name="CountdownUI" type="Control"]
custom_minimum_size = Vector2(448, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0bnqm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 4

[node name="TextureRect" type="TextureButton" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_gybcw")
texture_hover = ExtResource("3_ndbey")
ignore_texture_size = true
stretch_mode = 5

[node name="StageLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
horizontal_alignment = 2

[node name="CountdownLabel" type="Label" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_fonts/font = SubResource("SystemFont_jun1l")

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="pressed" from="MarginContainer/HBoxContainer/TextureRect" to="." method="_on_texture_rect_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
